# snake_rust

./: README.md
client/: Cargo.toml  build.rs
client/src/: main.rs
client/src/proto/: snake.rs
proto/: snake.proto
server/: Cargo.toml  build.rs
server/src/: main.rs  snake.rs
server/src/proto/: snake.rs
