[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.5", features = ["codegen", "prost"] }
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version =  "0.1", features = ["net"] }
[build-dependencies]
tonic-build = "0.5"
